# constraints

./: CMakeLists.txt
include/: constraints.h
src/: constraints.cpp  dimensions.h
